# juballer

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  build.yml  ci.yml  release.yml
assets/sample/: demo_song.memon  long_demo.memon  test.memon
crates/juballer-core/: Cargo.toml
crates/juballer-core/benches/: bench_layout.rs
crates/juballer-core/examples/: calibration_dance.rs  echo_grid.rs  smoke_grid.rs
crates/juballer-core/src/: error.rs  frame.rs  geometry.rs  lib.rs  process.rs  types.rs
crates/juballer-core/src/app/: builder.rs  mod.rs  mode.rs  profile_loader.rs  run.rs
crates/juballer-core/src/calibration/: mod.rs  paths.rs  profile.rs  ui.rs
crates/juballer-core/src/input/: keymap.rs  mod.rs  raw_linux.rs  raw_windows.rs  ring.rs  winit_backend.rs
crates/juballer-core/src/layout/: mod.rs  solve.rs
crates/juballer-core/src/render/: composite.rs  composite.wgsl  fill.rs  fill.wgsl  gpu.rs  headless.rs  mod.rs  window.rs
crates/juballer-core/src/ui/: mod.rs  pagination.rs
crates/juballer-core/tests/: no_alloc.rs  snapshots.rs
crates/juballer-deck/: Cargo.toml
crates/juballer-deck-protocol/: Cargo.toml
crates/juballer-deck-protocol/src/: lib.rs  view.rs
crates/juballer-deck/examples/: carla_listener_smoke.rs  rhythm_launcher_page.toml
crates/juballer-deck/examples/carla/: sample-config.toml
crates/juballer-deck/examples/carla/presets/cabs/: modern_mesa.preset.toml  vintage_marshall.preset.toml
crates/juballer-deck/examples/shaders/: alert.wgsl  ambient_warmth.wgsl  bg_waves.wgsl  empty_dotgrid.wgsl  forge.wgsl  heartbeat.wgsl  kind_glow.wgsl  lock_frost.wgsl  matrix_rain.wgsl  nav_pulse.wgsl  note_approach.wgsl  plasma.wgsl  press_ripple.wgsl  scroll_arrow.wgsl  solid_time.wgsl  toggle_bar.wgsl  vu_meter.wgsl  waves.wgsl
crates/juballer-deck/examples/shaders/backgrounds/: LICENSES.md  bg_cyber_fuji.wgsl  bg_dancing_cubes.wgsl  bg_fractal.wgsl  bg_galaxy.wgsl  bg_inversion.wgsl  bg_oscilloscope.wgsl
crates/juballer-deck/src/: app.rs  bus.rs  cli.rs  error.rs  icon_loader.rs  layout_convert.rs  lib.rs  logging.rs  main.rs  render.rs  state.rs  theme.rs  tile.rs
crates/juballer-deck/src/action/: mod.rs  registry.rs  trait_.rs
crates/juballer-deck/src/action/builtin/: app_launch.rs  carla_launch.rs  clipboard_set.rs  counter_decrement.rs  counter_display.rs  counter_increment.rs  deck_hold_cycle.rs  deck_page_back.rs  deck_page_goto.rs  deck_profile_switch.rs  deck_scroll_down.rs  deck_scroll_left.rs  deck_scroll_right.rs  deck_scroll_up.rs  grafana_dashboard_open.rs  http_get.rs  http_post.rs  http_probe.rs  keypress.rs  media_common.rs  media_next.rs  media_playpause.rs  media_prev.rs  media_vol_down.rs  media_vol_up.rs  mod.rs  multi_branch.rs  multi_delay.rs  multi_run_list.rs  ntfy_send.rs  open_url.rs  plugin_proxy_action.rs  portainer_stack_restart.rs  register.rs  rhythm_launch.rs  shell_run.rs  system_brightness.rs  system_mic_mute.rs  system_screenshot.rs  text_md_template.rs  (+9 more)
crates/juballer-deck/src/carla/: capture.rs  carxp.rs  carxs.rs  config.rs  discover.rs  dispatch.rs  listener.rs  mod.rs  names.rs  osc.rs  picker.rs  preset.rs  preset_picker.rs  render.rs  state.rs
crates/juballer-deck/src/config/: atomic.rs  interpolate.rs  load.rs  mod.rs  paths.rs  schema.rs  watch.rs
crates/juballer-deck/src/editor/: assets.rs  mod.rs  schema.rs  server.rs
crates/juballer-deck/src/editor/assets/: index.html
crates/juballer-deck/src/plugin/: host.rs  manifest.rs  mod.rs
crates/juballer-deck/src/rhythm/: audio.rs  background.rs  calibrate.rs  chart.rs  chart_overrides.rs  exit.rs  favorites.rs  judge.rs  marker.rs  mod.rs  mods_ui.rs  notes.rs  pagination.rs  picker.rs  picker_view.rs  render.rs  scores.rs  settings_ui.rs  sfx.rs  spectrum.rs  state.rs  textfx.rs  tutorial.rs
crates/juballer-deck/src/shader/: mod.rs
crates/juballer-deck/src/video/: blit.wgsl  mod.rs  v4l2.rs
crates/juballer-deck/src/widget/: card.rs  mod.rs  registry.rs  trait_.rs
crates/juballer-deck/src/widget/builtin/: action_mini.rs  clock.rs  counter_widget.rs  dynamic.rs  homelab_status.rs  http_probe.rs  image_widget.rs  log_feed.rs  mod.rs  notification_toast.rs  now_playing.rs  plugin_proxy.rs  register.rs  sysinfo_widget.rs  text.rs
crates/juballer-deck/tests/: bus_dispatch.rs  carla_sample_config.rs  dashboard_smoke.rs  editor_api.rs  page_scroll.rs  shader_smoke.rs  smoke.rs
crates/juballer-deck/tests/fixtures/dashboard/: deck.toml
crates/juballer-deck/tests/fixtures/dashboard/profiles/demo/: profile.toml
crates/juballer-deck/tests/fixtures/dashboard/profiles/demo/pages/: home.toml
crates/juballer-deck/tests/fixtures/minimal/: deck.toml
crates/juballer-deck/tests/fixtures/minimal/profiles/demo/: profile.toml
crates/juballer-deck/tests/fixtures/minimal/profiles/demo/pages/: home.toml
crates/juballer-deck/tests/fixtures/multipage/: deck.toml
crates/juballer-deck/tests/fixtures/multipage/profiles/alt/: profile.toml
crates/juballer-deck/tests/fixtures/multipage/profiles/alt/pages/: home.toml
crates/juballer-deck/tests/fixtures/multipage/profiles/demo/: profile.toml
crates/juballer-deck/tests/fixtures/multipage/profiles/demo/pages/: home.toml  media.toml  settings.toml
crates/juballer-egui/: Cargo.toml
crates/juballer-egui/fonts/: LICENSES.md
crates/juballer-egui/src/: lib.rs  textfx.rs
crates/juballer-gestures/: Cargo.toml
crates/juballer-gestures/src/: lib.rs
deck-py-sdk/: README.md  pyproject.toml
deck-py-sdk/src/juballer_deck/: __init__.py  _protocol.py  action.py  client.py  view.py  widget.py
deck-py-sdk/tests/: test_view.py
docs/: REPO-SETUP.md  STYLE.md  rhythm.md  shaders.md
docs/superpowers/plans/: 2026-04-16-juballer-core.md  2026-04-16-juballer-deck-plan-a-foundation.md  2026-04-16-juballer-deck-plan-b1-rendering.md  (+1 more)
plugins/discord/: README.md  main.py  manifest.toml  requirements.txt
scripts/: check.sh  generate_markers.sh  release.sh  synth_tick.py
(+6 files in other folders)
