[workspace]
resolver = "2"
members = [
    "crates/juballer-core",
    "crates/juballer-egui",
    "crates/juballer-gestures",
    "crates/juballer-deck-protocol",
    "crates/juballer-deck",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Jacob Sabella <jacobsabella@outlook.com>"]
repository = "https://github.com/jacob-sabella/juballer"

[workspace.dependencies]
winit = "0.30"
wgpu = "23"
egui = "0.30"
egui-wgpu = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
crossbeam-channel = "0.5"
indexmap = { version = "2", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
log = "0.4"
env_logger = "0.11"
raw-window-handle = "0.6"
evdev = "0.13"
windows = { version = "0.58", features = ["Win32_UI_Input", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
dhat = "0.3"
criterion = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
arboard = "3"
enigo = "0.5"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
interprocess = { version = "2", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["codec"] }
base64 = "0.22"
rosc = "0.11"
roxmltree = "0.20"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Workspace-wide lint policy. Per-crate `Cargo.toml` files opt in with
# `[lints] workspace = true`. Anything stricter than `warn` lives here
# so the build fails in CI but local edits stay productive.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
# Cosmetic — `Frame` vs `Frame<'_>`. Keep the rest of rust_2018_idioms.
elided_lifetimes_in_paths = "allow"
nonstandard_style = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Render code chains lots of `&Vec<…>` into wgpu APIs that take
# `IntoIterator<Item = …>`; the explicit borrow reads cleaner.
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
# `crate::Error` is intentionally rich (carries source contexts +
# Windows variants) so its size triggers result_large_err in places
# that bubble it. Boxing every Result would obscure the call sites.
result_large_err = "allow"

