[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juballer-deck"
version = "0.1.0"
description = "Python SDK for juballer-deck plugins"
authors = [{ name = "Jacob Sabella", email = "jacobsabella@outlook.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
juballer-plugin = "juballer_deck.client:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
