[package]
name = "juballer-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Optional egui-on-wgpu overlay integration for juballer-core."

[dependencies]
juballer-core = { path = "../juballer-core" }
egui.workspace = true
egui-wgpu.workspace = true
indexmap.workspace = true
wgpu.workspace = true
log.workspace = true

[lints]
workspace = true
